Introduce service accounts and bootstrap tokens
